--- a/src/app/components/home/item-types-navigation/item-types-navigation.component.html
+++ b/src/app/components/home/item-types-navigation/item-types-navigation.component.html
@@ -1,6 +1,6 @@
 <ul class ="items-list">
-    <li class ="item">Фотокамери</li>
-    <li class ="item">Об'єктиви</li>
-    <li class ="item">Спалахи</li>
-    <li class ="item">Штативи</li>
+    <li class ="item"><span>Фотокамери</span></li>
+    <li class ="item"><span>Об'єктиви</span></li>
+    <li class ="item"><span>Спалахи</span></li>
+    <li class ="item"><span>Штативи</span></li>
 </ul>
