finished the home page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="header-container">
   <select class="phone-selection">
     <option>0972395930</option>
     <option>0982395930</option>
