--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,9 @@
-<app-item-types-navigation></app-item-types-navigation>
-<app-carousel></app-carousel>
+<div class="carousel-block">
+    <app-item-types-navigation></app-item-types-navigation>
+    <app-carousel></app-carousel>
+  <app-items-list></app-items-list>
+</div>
+<app-items-list [itemsQuantity]="8"></app-items-list>
+<app-about-us></app-about-us>
+<app-we-are-social></app-we-are-social>
+<app-our-address></app-our-address>
