--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
-<app-items-list></app-items-list>
-<h1>Hello World dev</h1>
+<app-footer></app-footer>
