--- a/src/app/components/home/carousel/carousel.component.scss
+++ b/src/app/components/home/carousel/carousel.component.scss
@@ -1,4 +1,10 @@
 img {
     display: block; 
     width: 100%;
+    max-height: 380px;
+}
+
+.carousel-container {
+    width:100%;
+    // height: 100%;
 }
