--- a/src/app/components/home/item-types-navigation/item-types-navigation.component.scss
+++ b/src/app/components/home/item-types-navigation/item-types-navigation.component.scss
@@ -1,6 +1,10 @@
 .items-list{
     list-style-type: none;
     background-color:  rgb(200, 240, 245);
+    height: 100%;
+    width: 150px;
+    margin-right: 5px;
+    padding: 20px 20px;
 }
 
 .item{
