--- a/src/app/components/items/items-list/items-list.component.scss
+++ b/src/app/components/items/items-list/items-list.component.scss
@@ -1,4 +1,5 @@
 .list-of-items {
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 5px;
